--- a/2023_Graduate_Project/Model/Cell/ChatCell.xib
+++ b/2023_Graduate_Project/Model/Cell/ChatCell.xib
@@ -15,7 +15,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell1" rowHeight="202" id="GQw-df-w6E" customClass="ChatCell" customModule="_023_Graduate_Project_Seller" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell1" rowHeight="202" id="GQw-df-w6E" customClass="ChatCell" customModule="_023_Graduate_Project" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="393" height="202"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GQw-df-w6E" id="ivh-ry-Mqt">
@@ -64,6 +64,7 @@
                     <constraint firstAttribute="bottom" secondItem="Hwr-IL-KtB" secondAttribute="bottom" constant="30" id="nHE-bW-zds"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" red="0.97254901959999995" green="0.96862745100000003" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <connections>
                 <outlet property="chatBubble" destination="UEC-MA-JcH" id="iuV-vs-1dg"/>
                 <outlet property="detailLabel" destination="NNS-gs-0w2" id="cpo-9u-E4B"/>
